@@ -49,6 +49,11 @@ class TestTable < Test::Unit::TestCase
     a.each { |r| assert_equal rows.shift, r.data 
                  assert_equal %w[c a], r.attributes }
     assert_equal %w[c a], a.column_names
+
+    b = [[1,2,3],[4,5,6]].to_table(%w[a b c]).reorder(%w[a c])
+    rows = [[1,3],[4,6]]
+    b.each { |r| assert_equal rows.shift, r.data
+                 assert_equal %w[a c], r.attributes }
   end
 
   def test_append_column
